--- a/demo.html
+++ b/demo.html
@@ -1,37 +1,29 @@
 <html>
-<head>
-  <title>Linkify jQuery Plugin</title>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js" type="text/javascript"></script>
-  <script src="jquery.linkify.js" type="text/javascript"></script>
-  <style type="text/css">
-    textarea {
-      width: 300px;
-      height: 50px;
-    }
-  </style>
-  <script type="text/javascript">
-    function toHashtagUrl(hashtag) {
-      return "http://myservice.com/search?q=" + hashtag;
-    }
-    
-    $(document).ready(function() {
-      $("form input[type='submit']").click(function() {
-        str = this.form.content.value
-        $("#content").html(str);
-        $("#content").linkify(toHashtagUrl);
-        return false;
-      });
-    });
-  </script>
-</head>
-<body>
-  <h1>Linkify jQuery Plugin Demo</h1>
-  <form>
-      <textarea name="content">Go to http://www.youtube.com or www.vimeo.com to watch the #movie</textarea>
-      <div>
-        <input type="submit" value="Apply"/>
-      </div>
-  </form>
-  <div id="content"></div>
-</body>
+    <head>
+        <style>
+            div { white-space: pre; }
+        </style>
+    </head>
+    <body>
+        <h1>Linkify attempt</h1>
+        <h2>Source</h2>
+        <div id="source">
+            1: http://google.com#foobar
+            2: http://google.com#foobar.
+            3: <span>http://google.com#foobar</span>
+            4: <a href="http://google.com">Google</a>.
+            5: <a href="http://google.com">http://google.com</a>.
+        </div>
+        <h2>Desired</h2>
+        <div id="desired">
+            1: <a href="http://google.com#foobar">http://google.com#foobar</a>
+            2: <a href="http://google.com#foobar">http://google.com#foobar</a>.
+            3: <span><a href="http://google.com#foobar">http://google.com#foobar</a></span>
+            4: <a href="http://google.com">Google</a>.
+            5: <a href="http://google.com">http://google.com</a>.
+        </div>
+    </body>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script src="jquery.linkify.js"></script>
+    <script>$("#source").linkify();</script>
 </html>
