--- a/demo.html
+++ b/demo.html
@@ -26,4 +26,5 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="jquery.linkify.js"></script>
     <script>$("#source").linkify();</script>
+    <script>$("#source").linkify();</script>
 </html>
