Better demonstrate maintenance of outer HTML elements

--- a/demo.html
+++ b/demo.html
@@ -10,7 +10,7 @@
         <div id="source">
             1: http://google.com#foobar
             2: http://google.com#foobar.
-            3: <span>http://google.com#foobar</span>
+            3: <strong>http://google.com#foobar</strong>
             4: <a href="http://google.com">Google</a>.
             5: <a href="http://google.com">http://google.com</a>.
         </div>
@@ -18,7 +18,7 @@
         <div id="desired">
             1: <a href="http://google.com#foobar">http://google.com#foobar</a>
             2: <a href="http://google.com#foobar">http://google.com#foobar</a>.
-            3: <span><a href="http://google.com#foobar">http://google.com#foobar</a></span>
+            3: <strong><a href="http://google.com#foobar">http://google.com#foobar</a></strong>
             4: <a href="http://google.com">Google</a>.
             5: <a href="http://google.com">http://google.com</a>.
         </div>
