Don't linkify down buttons either

--- a/demo.html
+++ b/demo.html
@@ -14,6 +14,7 @@
             4: <a href="http://google.com">Google</a>.
             5: <a href="http://google.com">http://google.com</a>.
             6: (http://google.com#foobar)
+            7: <button>http://google.com#foobar</button>
         </div>
         <h2>Desired</h2>
         <div id="desired">
@@ -23,6 +24,7 @@
             4: <a href="http://google.com">Google</a>.
             5: <a href="http://google.com">http://google.com</a>.
             6: (<a href="http://google.com#foobar">http://google.com#foobar</a>)
+            7: <button>http://google.com#foobar</button>
         </div>
     </body>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
