--- a/demo.html
+++ b/demo.html
@@ -5,18 +5,8 @@
         </style>
     </head>
     <body>
-        <h1>Linkify attempt</h1>
-        <h2>Source</h2>
-        <div id="source">
-            1: http://google.com#foobar
-            2: http://google.com#foobar.
-            3: <strong>http://google.com#foobar</strong>
-            4: <a href="http://google.com">Google</a>.
-            5: <a href="http://google.com">http://google.com</a>.
-            6: (http://google.com#foobar)
-            7: <button>http://google.com#foobar</button>
-        </div>
-        <h2>Desired</h2>
+        <h1>Linkify demonstration</h1>
+        <h2>Desired result</h2>
         <div id="desired">
             1: <a href="http://google.com#foobar">http://google.com#foobar</a>
             2: <a href="http://google.com#foobar">http://google.com#foobar</a>.
@@ -26,12 +16,22 @@
             6: (<a href="http://google.com#foobar">http://google.com#foobar</a>)
             7: <button>http://google.com#foobar</button>
         </div>
+        <h2>Attempt</h2>
+        <div id="attempt">
+            1: http://google.com#foobar
+            2: http://google.com#foobar.
+            3: <strong>http://google.com#foobar</strong>
+            4: <a href="http://google.com">Google</a>.
+            5: <a href="http://google.com">http://google.com</a>.
+            6: (http://google.com#foobar)
+            7: <button>http://google.com#foobar</button>
+        </div>
     </body>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="jquery.linkify.js"></script>
     <script>
-        $("#source").linkify();
-        $("#source").linkify();
-        $("body").css("background", $("#source").html() == $("#desired").html() ? "#cfc" : "#fcc");
+        $("#attempt").linkify();
+        $("#attempt").linkify();
+        $("body").css("background", $("#attempt").html() == $("#desired").html() ? "#cfc" : "#fcc");
     </script>
 </html>
