--- a/demo.html
+++ b/demo.html
@@ -14,7 +14,8 @@
             4: <a href="http://google.com">Google</a>.
             5: <a href="http://google.com">http://google.com</a>.
             6: (<a href="http://google.com#foobar">http://google.com#foobar</a>)
-            7: <button>http://google.com#foobar</button>
+            7: <a href="http://en.wikipedia.org/wiki/Google_(disambiguation)">http://en.wikipedia.org/wiki/Google_(disambiguation)</a>
+            8: <button>http://google.com#foobar</button>
         </div>
         <h2>Attempt</h2>
         <div id="attempt">
@@ -24,7 +25,8 @@
             4: <a href="http://google.com">Google</a>.
             5: <a href="http://google.com">http://google.com</a>.
             6: (http://google.com#foobar)
-            7: <button>http://google.com#foobar</button>
+            7: http://en.wikipedia.org/wiki/Google_(disambiguation)
+            8: <button>http://google.com#foobar</button>
         </div>
     </body>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
