Prepend un-protocol'd links with http://

--- a/demo.html
+++ b/demo.html
@@ -8,25 +8,27 @@
         <h1>Linkify demonstration</h1>
         <h2>Desired result</h2>
         <div id="desired">
-            1: <a href="http://google.com#foobar">http://google.com#foobar</a>
-            2: <a href="http://google.com#foobar">http://google.com#foobar</a>.
-            3: <strong><a href="http://google.com#foobar">http://google.com#foobar</a></strong>
-            4: <a href="http://google.com">Google</a>.
-            5: <a href="http://google.com">http://google.com</a>.
-            6: (<a href="http://google.com#foobar">http://google.com#foobar</a>)
-            7: <a href="http://en.wikipedia.org/wiki/Google_(disambiguation)">http://en.wikipedia.org/wiki/Google_(disambiguation)</a>
-            8: <button>http://google.com#foobar</button>
+            <a href="http://google.com#foobar">http://google.com#foobar</a>
+            <a href="http://google.com#foobar">http://google.com#foobar</a>.
+            <strong><a href="http://google.com#foobar">http://google.com#foobar</a></strong>
+            <a href="http://google.com">Google</a>.
+            <a href="http://google.com">http://google.com</a>.
+            (<a href="http://google.com#foobar">http://google.com#foobar</a>)
+            <a href="http://en.wikipedia.org/wiki/Google_(disambiguation)">http://en.wikipedia.org/wiki/Google_(disambiguation)</a>
+            <button>http://google.com#foobar</button>
+            <a href="http://www.google.com">www.google.com</a>
         </div>
         <h2>Attempt</h2>
         <div id="attempt">
-            1: http://google.com#foobar
-            2: http://google.com#foobar.
-            3: <strong>http://google.com#foobar</strong>
-            4: <a href="http://google.com">Google</a>.
-            5: <a href="http://google.com">http://google.com</a>.
-            6: (http://google.com#foobar)
-            7: http://en.wikipedia.org/wiki/Google_(disambiguation)
-            8: <button>http://google.com#foobar</button>
+            http://google.com#foobar
+            http://google.com#foobar.
+            <strong>http://google.com#foobar</strong>
+            <a href="http://google.com">Google</a>.
+            <a href="http://google.com">http://google.com</a>.
+            (http://google.com#foobar)
+            http://en.wikipedia.org/wiki/Google_(disambiguation)
+            <button>http://google.com#foobar</button>
+            www.google.com
         </div>
     </body>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
