--- a/demo.html
+++ b/demo.html
@@ -31,7 +31,7 @@
             www.google.com
         </div>
     </body>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="jquery.linkify.js"></script>
     <script>
         $("#attempt").linkify();
