Adding email linking to the demo

--- a/demo.html
+++ b/demo.html
@@ -17,6 +17,7 @@
             <a href="http://en.wikipedia.org/wiki/Google_(disambiguation)">http://en.wikipedia.org/wiki/Google_(disambiguation)</a>
             <button>http://google.com#foobar</button>
             <a href="http://www.google.com">www.google.com</a>
+            <a href="mailto:text@example.com">text@example.com</a>
         </div>
         <h2>Attempt</h2>
         <div id="attempt">
@@ -29,6 +30,7 @@
             http://en.wikipedia.org/wiki/Google_(disambiguation)
             <button>http://google.com#foobar</button>
             www.google.com
+            text@example.com
         </div>
     </body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
