Better email regex so as to emit a period at the end of an email

--- a/demo.html
+++ b/demo.html
@@ -18,6 +18,7 @@
             <button>http://google.com#foobar</button>
             <a href="http://www.google.com">www.google.com</a>
             <a href="mailto:text@example.com">text@example.com</a>
+            <a href="mailto:text@example.com">text@example.com</a>.
         </div>
         <h2>Attempt</h2>
         <div id="attempt">
@@ -31,6 +32,7 @@
             <button>http://google.com#foobar</button>
             www.google.com
             text@example.com
+            text@example.com.
         </div>
     </body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
