--- a/demo.html
+++ b/demo.html
@@ -14,13 +14,14 @@
             <a href="http://google.com">Google</a>.
             <a href="http://google.com">http://google.com</a>.
             (<a href="http://google.com#foobar">http://google.com#foobar</a>)
+            &lt;<a href="http://google.com">http://google.com</a>&gt;
             <a href="http://en.wikipedia.org/wiki/Google_(disambiguation)">http://en.wikipedia.org/wiki/Google_(disambiguation)</a>
             <button>http://google.com#foobar</button>
             <a href="http://www.google.com">www.google.com</a>
-            <a href="mailto:text@example.com">text@example.com</a>
-            <a href="mailto:text@example.com">text@example.com</a>.
-            &lt;<a href="mailto:text@example.com">text@example.com</a>&gt;
-            &lt;<a href="mailto:text@example.com">text@example.com</a>&gt;.
+            <a href="mailto:text1@example.com">text1@example.com</a>
+            <a href="mailto:text2@example.com">text2@example.com</a>.
+            &lt;<a href="mailto:text3@example.com">text3@example.com</a>&gt;
+            &lt;<a href="mailto:text4@example.com">text4@example.com</a>&gt;.
         </div>
         <h2>Attempt</h2>
         <div id="attempt">
@@ -30,23 +31,32 @@
             <a href="http://google.com">Google</a>.
             <a href="http://google.com">http://google.com</a>.
             (http://google.com#foobar)
+            &lt;http://google.com&gt;
             http://en.wikipedia.org/wiki/Google_(disambiguation)
             <button>http://google.com#foobar</button>
             www.google.com
-            text@example.com
-            text@example.com.
-            &lt;text@example.com&gt;
-            &lt;text@example.com&gt;.
+            text1@example.com
+            text2@example.com.
+            &lt;text3@example.com&gt;
+            &lt;text4@example.com&gt;.
         </div>
     </body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
     <script src="jquery.linkify.js"></script>
     <script>
         try {
-            for (var i=1; i<5; i++) {
+            for (var pass=1; pass<5; pass++) {
                 $("#attempt").linkify();
-                if ($("#attempt").html() != $("#desired").html()) {
-                    throw "Failed on pass #" + i;
+                var attempt_html = $("#attempt").html();
+                var desired_html = $("#desired").html();
+                if (attempt_html != desired_html) {
+                    for (var i=0, len = attempt_html.length; i < len; i++) {
+                        if (attempt_html[i] !== desired_html[i]) {
+                            console.log("Difference at character "+i+": "+attempt_html.substr(Math.max(0, i - 30), 60));
+                            break;
+                        }
+                    }
+                    throw "Failed on pass #" + pass;
                 }
             }
             $("body").css("background", "#cfc");
