--- a/demo.html
+++ b/demo.html
@@ -10,6 +10,7 @@
         <div id="desired">
             <a href="http://google.com#foobar">http://google.com#foobar</a>
             <a href="http://google.com#foobar">http://google.com#foobar</a>.
+            <a href="http://google.com">google.com</a>
             <strong><a href="http://google.com#foobar">http://google.com#foobar</a></strong>
             <a href="http://google.com">Google</a>.
             <a href="http://google.com">http://google.com</a>.
@@ -27,6 +28,7 @@
         <div id="attempt">
             http://google.com#foobar
             http://google.com#foobar.
+            google.com
             <strong>http://google.com#foobar</strong>
             <a href="http://google.com">Google</a>.
             <a href="http://google.com">http://google.com</a>.
