Fixing regex that caused foobar-com to link up

--- a/demo.html
+++ b/demo.html
@@ -11,6 +11,7 @@
             <a href="http://google.com#foobar">http://google.com#foobar</a>
             <a href="http://google.com#foobar">http://google.com#foobar</a>.
             <a href="http://google.com">google.com</a>
+            google-com
             <strong><a href="http://google.com#foobar">http://google.com#foobar</a></strong>
             <a href="http://google.com">Google</a>.
             <a href="http://google.com">http://google.com</a>.
@@ -29,6 +30,7 @@
             http://google.com#foobar
             http://google.com#foobar.
             google.com
+            google-com
             <strong>http://google.com#foobar</strong>
             <a href="http://google.com">Google</a>.
             <a href="http://google.com">http://google.com</a>.
