--- a/demo.html
+++ b/demo.html
@@ -11,6 +11,7 @@
             <a href="http://google.com#foobar">http://google.com#foobar</a>
             <a href="http://google.com#foobar">http://google.com#foobar</a>.
             <a href="http://google.com">google.com</a>
+            google.com.javapackagedescriptor
             google-com
             <strong><a href="http://google.com#foobar">http://google.com#foobar</a></strong>
             <a href="http://google.com">Google</a>.
@@ -30,6 +31,7 @@
             http://google.com#foobar
             http://google.com#foobar.
             google.com
+            google.com.javapackagedescriptor
             google-com
             <strong>http://google.com#foobar</strong>
             <a href="http://google.com">Google</a>.
