More generic handling of domains, not perfect but good enough

--- a/demo.html
+++ b/demo.html
@@ -10,9 +10,6 @@
         <div id="desired">
             <a href="http://google.com#foobar">http://google.com#foobar</a>
             <a href="http://google.com#foobar">http://google.com#foobar</a>.
-            <a href="http://google.com">google.com</a>
-            google.com.javapackagedescriptor
-            google-com
             <strong><a href="http://google.com#foobar">http://google.com#foobar</a></strong>
             <a href="http://google.com">Google</a>.
             <a href="http://google.com">http://google.com</a>.
@@ -25,14 +22,14 @@
             <a href="mailto:text2@example.com">text2@example.com</a>.
             &lt;<a href="mailto:text3@example.com">text3@example.com</a>&gt;
             &lt;<a href="mailto:text4@example.com">text4@example.com</a>&gt;.
+            <a href="http://google.com">google.com</a>
+            <a href="http://google.com">google.com</a>.javapackagedescriptor
+            google-com
         </div>
         <h2>Attempt</h2>
         <div id="attempt">
             http://google.com#foobar
             http://google.com#foobar.
-            google.com
-            google.com.javapackagedescriptor
-            google-com
             <strong>http://google.com#foobar</strong>
             <a href="http://google.com">Google</a>.
             <a href="http://google.com">http://google.com</a>.
@@ -45,6 +42,9 @@
             text2@example.com.
             &lt;text3@example.com&gt;
             &lt;text4@example.com&gt;.
+            google.com
+            google.com.javapackagedescriptor
+            google-com
         </div>
     </body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
